--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,21 @@
-.hide {
-    display: none;
+body {
+    margin: 0 auto;
+    width: 45%;
+    margin-top: 3rem;
+    background-color: darkcyan;
+    font-size: 40px;
+}
+
+#Card {
+    border-style: solid;
+    border-color: azure;
+    background-color: chartreuse;
+}
+
+#start-btn {
+    font-size: 3rem;
+}
+
+.choice {
+    font-size: 20px;
 }
